--- a/ckanext-offgridtheme/ckanext/offgridtheme/sources/styles/less/utilities.less
+++ b/ckanext-offgridtheme/ckanext/offgridtheme/sources/styles/less/utilities.less
@@ -96,12 +96,12 @@
    ========================================================================== */
 
 .clearfix {
-  &:before,
-  &:after {
+  &::before,
+  &::after {
     content: " ";
     display: table;
   }
-  &:after {
+  &::after {
     clear: both;
   }
 }
